Uses a BufferedReader and InputStreamReader to console out the underlying html of www.example.org.